Addressed comments, need to finish conclusions
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@432 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -3027,3 +3027,50 @@
 	reportNumber   = "LAPTH-015-15, CTPU-15-04, LPSC-15084",
 	SLACcitation   = "%%CITATION = ARXIV:1503.07367;%%",
 }
+
+
+@article{Marchesini1992465,
+	title = "\{HERWIG\} 5.1 - a Monte Carlo event generator for simulating hadron emission reactions with interfering gluons ",
+	journal = "Computer Physics Communications ",
+	volume = "67",
+	number = "3",
+	pages = "465 - 508",
+	year = "1992",
+	note = "",
+	issn = "0010-4655",
+	doi = "http://dx.doi.org/10.1016/0010-4655(92)90055-4",
+	url = "http://www.sciencedirect.com/science/article/pii/0010465592900554",
+	author = "G. Marchesini and B.R. Webber and G. Abbiendi and I.G. Knowles and M.H. Seymour and L. Stanco"
+}
+
+@article{Corcella:2002jc,
+	author         = "Corcella, G. and Knowles, I.G. and Marchesini, G. and
+	Moretti, S. and Odagiri, K. and others",
+	title          = "{HERWIG 6.5 release note}",
+	year           = "2002",
+	eprint         = "hep-ph/0210213",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "CAVENDISH-HEP-02-17, DAMTP-2002-124, KEK-TH-850,
+	MPI-PHT-2002-55, CERN-TH-2002-270, IPPP-02-58,
+	MC-TH-2002-7",
+	SLACcitation   = "%%CITATION = HEP-PH/0210213;%%",
+}
+
+@article{Bahr:2008pv,
+	author         = "Bahr, M. and Gieseke, S. and Gigg, M.A. and Grellscheid,
+	D. and Hamilton, K. and others",
+	title          = "{Herwig++ Physics and Manual}",
+	journal        = "Eur.Phys.J.",
+	volume         = "C58",
+	pages          = "639-707",
+	doi            = "10.1140/epjc/s10052-008-0798-9",
+	year           = "2008",
+	eprint         = "0803.0883",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "CERN-PH-TH-2008-038, CAVENDISH-HEP-08-03, KA-TP-05-2008,
+	DCPT-08-22, IPPP-08-11, CP3-08-05",
+	SLACcitation   = "%%CITATION = ARXIV:0803.0883;%%",
+}
+
