--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -127,7 +127,7 @@ $\beta_f=\sqrt{1-\frac{4 m_f^2}{\mMed^2}}$ is the velocity of the
 fermion $f$ with mass $m_f$  in the mediator rest frame.
 Note the color factor 3 in the quark terms.
 Figure\,\ref{fig:monojet_width_V} shows the minimal width as a function of mediator mass for both vector and axial-vector mediators assuming
-$\gq=\gDM=1$. With this choice of the couplings, the dominant contribution to the minimal width comes from the quarks, due 
+the coupling choice $\gq=\gDM=1$. With this choice of the couplings, the dominant contribution to the minimal width comes from the quarks, due 
 to the combined quark number and color factor enhancement. %CD: before was:"and the large number of them."
 We specifically assume that the vector mediator does not couple to leptons.  If such a coupling were present, it would have a minor effect in increasing the mediator width, but it would also bring in constraints from measurements of the Drell-Yan process that would unnecessarily restrict the model space.
 
@@ -240,14 +240,14 @@ Since kinematic distributions are robust to
 changes in the specific values of coupling~\footnote{This applies
 as long as heavy narrow mediators are generated without any truncation
 of low-mass tails at the generator-level.},
-the choice of $\gq=\gDM$ is reasonable 
+the choice of $\gq=$0.25 and $\gDM=$1 is reasonable 
 to reduce the parameter space to be scanned. 
 There are no complications associated
 with small couplings, but, also, the early part of Run~2 will not be
 sensitive to them.  The range of couplings we recommend to generate limit the
 calculated width of the mediator to be near or below \mMed.
 
-For direct mediator searches, such as $q\bar q\to Z^\prime \to q\bar q$, asymmetric couplings ($\gq \ne \gDM$)
+For direct mediator searches, such as $q\bar q\to Z^\prime \to q\bar q$, different couplings ($\gq \ne \gDM$)
 might also be considered. A scan in \gDM vs \gq can then be performed for a fixed mediator mass. Such searches
 %such as those for
 %dijet resonances,
@@ -617,7 +617,6 @@ where $x=3$ for scalars and $x=1$ for pseudoscalars. The loop integrals, with $f
   \right) \, 
   \eea
 \end{fullwidth}
-
 where $\tau = 4 m_{t}^2/m_{\phi,a}^2$. 
 
 %for mediator masses above the top threshold, $\tau > 1$, where $\tau = 4 m_{t}^2/m_{\phi,a}^2$, and, for mediator masses below the top threshold, $\tau < 1$, 
