--- a/doc/tex/MonojetLikeModels_Appendix.tex
+++ b/doc/tex/MonojetLikeModels_Appendix.tex
@@ -14,7 +14,7 @@ the corresponding analyses  directly using the new releases and/or codes, and in
 to at least take into account the new information in the analysis (e.g., via a MC comparison with the latest predictions, 
 or by effectively using global/local $K$-factors). For all models included in this report, 
 \pythiaEight has been used to provide the parton shower simulation. Nevertheless, 
-we note that showering matrix element events with Herwig~\cite{Corcella:2000bw} should be considered as 
+we note that showering matrix element events with Herwig~\cite{Bahr:2008pv,Corcella:2002jc,Corcella:2000bw,Marchesini1992465} should be considered as 
 an equally valid alternative.
 
 \subsection{Implementation of  \schannel  models for mono-jet signature}
