--- a/doc/tex/TTBar.tex
+++ b/doc/tex/TTBar.tex
@@ -94,7 +94,7 @@ transition region between on-shell and off-shell mediators. %, as inFig.~\ref{fi
 \begin{figure}[!ht]
   \begin{center}
     \includegraphics[width=0.95\textwidth]{figures/ttbar/MEt_chi1.pdf}
-    \caption{\label{fig:scanPhi} Example of the dependence of the kinematics on the scalar mediator mass. The Dark Matter mass is fixed to be \mdm=$1 {\rm GeV}$.}
+    \caption{\label{fig:scanPhi} Example of the dependence of the kinematics on the scalar mediator mass in the $t\bar{t}$+\MET{} signature. The Dark Matter mass is fixed to be \mdm=$1 {\rm GeV}$.}
 \end{center}
 \end{figure}
 
@@ -102,7 +102,7 @@ transition region between on-shell and off-shell mediators. %, as inFig.~\ref{fi
 \begin{figure}[!ht]
   \begin{center}
     \includegraphics[width=0.95\textwidth]{figures/ttbar/MEt_chi1_pseudo.pdf}
-    \caption{\label{fig:scanPhiPseudo} Example of the dependence of the kinematics on the pseudoscalar mediator mass. The Dark Matter mass is fixed to be \mdm=$1 {\rm GeV}$. All figures concerning the $t\bar{t}$+\MET{}  signature have been produced using a leading order model within \madgraph 2.2.2, using \pythiaEight for the parton shower.}
+    \caption{\label{fig:scanPhiPseudo} Example of the dependence of the kinematics on the pseudoscalar mediator mass in the $t\bar{t}$+\MET{}. The Dark Matter mass is fixed to be \mdm=$1 {\rm GeV}$. All figures concerning the $t\bar{t}$+\MET{}  signature have been produced using a leading order model within \madgraph 2.2.2, using \pythiaEight for the parton shower.}
 \end{center}
 \end{figure}
 
@@ -121,7 +121,7 @@ At large mediator masses ($\sim 1.5\,{\rm TeV}$) or very small couplings ($\sim 
 \begin{figure}[!ht]
   \begin{center}
     \includegraphics[width=0.95\textwidth]{figures/ttbar/MEt_smallwidth.pdf}
-    \caption{\label{fig:widthsmallscan} Study of the dependence of kinematics on the width of a scalar mediator. The width is increased up to four times the minimal width for each mediator and Dark Matter mass combination. 
+    \caption{\label{fig:widthsmallscan} Study of the dependence of kinematics on the width of a scalar mediator $t\bar{t}$+\MET{}. The width is increased up to four times the minimal width for each mediator and Dark Matter mass combination. 
     }
 \end{center}
 \end{figure}
@@ -134,7 +134,7 @@ Another case where the width can impact the kinematics is when $m_{\phi,a}$ is s
   \begin{center}
     \includegraphics[width=0.95\textwidth]{figures/ttbar/ScalarWidth.pdf}
     \vspace{2mm}
-    \caption{\label{fig:widthlargescan} Dependence of the kinematics on the width of a scalar mediator. The width is increased up to the mediator mass. Choices of mediator and Dark Matter masses such that $m_{\phi,a}$ is slightly larger than $2m_\chi$ is the only case that shows a sizeable variation of the kinematics as a function of the width.  
+    \caption{\label{fig:widthlargescan} Dependence of the kinematics on the width of a scalar mediator $t\bar{t}$+\MET{}. The width is increased up to the mediator mass. Choices of mediator and Dark Matter masses such that $m_{\phi,a}$ is slightly larger than $2m_\chi$ is the only case that shows a sizeable variation of the kinematics as a function of the width.  
     }
 \end{center}
 \end{figure}
