--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -2539,7 +2539,7 @@
 }
 
 @article{Hoche:2014kca,
-	author         = "Höche, Stefan and Kuttimalai, Silvan and Schumann,
+	author         = "Hoeche, Stefan and Kuttimalai, Silvan and Schumann,
 	Steffen and Siegert, Frank",
 	title          = "Beyond {Standard Model} calculations with {Sherpa}",
 	journal        = "Eur.Phys.J.",
@@ -3000,7 +3000,7 @@
 	SLACcitation   = "%%CITATION = ARXIV:1212.4100;%%",
 }
 @article{IDMposthiggs, 
-      author         = "Goudelis, A. and Herrmann, B. and Stål, O.", 
+      author         = "Goudelis, A. and Herrmann, B. and St\aa{}l, O.", 
       title          = "Dark matter in the {Inert Doublet Model} after the 
                         discovery of a Higgs-like boson at the {LHC}", 
       journal        = "JHEP", 
