--- a/doc/tex/Conclusions.tex
+++ b/doc/tex/Conclusions.tex
@@ -63,9 +63,9 @@
 %\Todo{These points will be discussed at the meeting that marks the conclusion of the works of the Forum, to be held during the week of June 21st.} 
 
 The ATLAS/CMS Dark Matter Forum concluded its work in June 2015. Its mandate was focused on identifying a prioritized, compact set of simplified model benchmarks
-to be used for the design of the early Run–2 LHC searches for \MET+X final states. Its participants included many of the experimenters from both collaborations that are involved in these searches, as well as many of the theorists working actively on these models.
+to be used for the design of the early Run-2 LHC searches for \MET+X final states. Its participants included many of the experimenters from both collaborations that are involved in these searches, as well as many of the theorists working actively on these models.
 This report has documented this basis set of models, as well as studies of the kinematically-distinct regions of the parameter space of the models, to aid the design of the searches.
-Table 6.1 summarizes the state of the art of the calculations, event generators, and tools that are available to the two LHC collaborations to simulate these models at the start of Run–2. It also describes some that are known to be under development as the report was finalized.
+Table 6.1 summarizes the state of the art of the calculations, event generators, and tools that are available to the two LHC collaborations to simulate these models at the start of Run-2. It also describes some that are known to be under development as the report was finalized.
 
 \input{tex/SummaryTable.tex}.
 
@@ -81,14 +81,19 @@ in order to fully benefit from LHC searches in the global quest for Dark Matter.
 First and foremost, to accomodate the urgent need of a basis set of simplified models, 
 this work has made many grounding assumptions, as stated in the introduction. Departures from these assumptions have not been fully explored.
 As a consequence, the list of models and implementations employed by the ATLAS and CMS collaborations 
-for early LHC Run–2 searches is not meant to exhaust the range of possibilities for mediating processes, 
-let alone cover all plausible mdoels of collider dark matter production.
-
-Rather, it is hoped that others will continue the systematic exploration of the most generic possibilites for collider dark matter production, building upon the framework used in this report just as this report has relied heavily on the work of many others. 
+for early LHC Run-2 searches is not meant to exhaust the range of possibilities for mediating processes, 
+let alone cover all plausible mdoels of collider dark matter production. 
+Rather, it is hoped that others will continue the systematic exploration of the most generic possibilites 
+for collider dark matter production, building upon the framework used in this report just as this report has 
+relied heavily on the work of many others. 
+This also applies to models that exist in literature but do not have an implementation yet: we
+hope that this work will further encourage the theory and generator community to improve the 
+implementation of new models as well as the precision of the calculations of existing ones. 
+The role of constraints on the mediator particles
+from direct past and present collider searches should also be developed further.
 
 Furthermore, we see the need for broader discussion on the comparison
-of experimental results amongst collider and non-collider searches for particle dark matter. The role of constraints on the mediator particles
-from direct past and present collider searches should be developed further.
+of experimental results amongst collider and non-collider searches for particle dark matter. 
+This point will have to be addressed before the presentation of Run-2 results:
 The uncertainties in the comparisons between experiments should be discussed and conveyed, so that the different results
 can be placed in their correct context, and so we can collectively build a fair and comprehensive picture of our understanding of particle Dark Matter.
-\Todo{These points will be discussed at the meeting that marks the conclusion of the works of the Forum, to be held during the week of June 21st.}
