--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -3074,3 +3074,50 @@
 	SLACcitation   = "%%CITATION = ARXIV:0803.0883;%%",
 }
 
+@article{Birkedal:2004xn,
+	author         = "Birkedal, Andreas and Matchev, Konstantin and Perelstein,
+	Maxim",
+	title          = "{Dark matter at colliders: A Model independent approach}",
+	journal        = "Phys.Rev.",
+	volume         = "D70",
+	pages          = "077701",
+	doi            = "10.1103/PhysRevD.70.077701",
+	year           = "2004",
+	eprint         = "hep-ph/0403004",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "UFIFT-HEP-04-3",
+	SLACcitation   = "%%CITATION = HEP-PH/0403004;%%",
+}
+
+@article{Petriello:2008pu,
+	author         = "Petriello, Frank J. and Quackenbush, Seth and Zurek,
+	Kathryn M.",
+	title          = "{The Invisible $Z^\prime$ at the CERN LHC}",
+	journal        = "Phys.Rev.",
+	volume         = "D77",
+	pages          = "115020",
+	doi            = "10.1103/PhysRevD.77.115020",
+	year           = "2008",
+	eprint         = "0803.4005",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	SLACcitation   = "%%CITATION = ARXIV:0803.4005;%%",
+}
+
+@article{Gershtein:2008bf,
+	author         = "Gershtein, Yuri and Petriello, Frank and Quackenbush,
+	Seth and Zurek, Kathryn M.",
+	title          = "{Discovering hidden sectors with mono-photon $Z^\prime$o
+	searches}",
+	journal        = "Phys.Rev.",
+	volume         = "D78",
+	pages          = "095002",
+	doi            = "10.1103/PhysRevD.78.095002",
+	year           = "2008",
+	eprint         = "0809.2849",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "FERMILAB-PUB-08-500-A",
+	SLACcitation   = "%%CITATION = ARXIV:0809.2849;%%",
+}
