--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -5,7 +5,7 @@
 %%%%%%%%%%%%%
 %\newif\ifNotMonojetTTBarOnly
 
-\usepackage[autokw=all]{svn-multi}[2015/05/12]
+%\usepackage[autokw=all]{svn-multi}[2015/05/12]
 %\svnidlong
 %{$HeadURL$}
 %{$LastChangedDate$}
@@ -15,7 +15,7 @@
 \usepackage{graphicx}
 \usepackage[svgnames]{xcolor}
 \usepackage{hyperref}
-\usepackage{lineno}
+%\usepackage{lineno}
 \usepackage{epstopdf}
 % \usepackage{appendix}
 \usepackage{xspace} %for single top
@@ -96,10 +96,10 @@
 \usepackage{titling}
 
 % set header to mark pages "DRAFT" and include page numbers
-\fancyhead[LE]{\thepage\quad\smallcaps{\newlinetospace{{\color{red}DRAFT}\:SVN:\svndate\: r\svnrev}}}
-\fancyhead[RO]{\smallcaps{\newlinetospace{{\color{red}DRAFT}\:SVN:\svndate\:r\svnrev\quad}}\quad\thepage}
-% draft comes with line numbers
-\linenumbers
+%\fancyhead[LE]{\thepage\quad\smallcaps{\newlinetospace{{\color{red}DRAFT}\:SVN:\svndate\: r\svnrev}}}
+%\fancyhead[RO]{\smallcaps{\newlinetospace{{\color{red}DRAFT}\:SVN:\svndate\:r\svnrev\quad}}\quad\thepage}
+%% draft comes with line numbers
+%\linenumbers
 
 
 % consistent symbols throughout document
