--- a/doc/frontmatter.tex
+++ b/doc/frontmatter.tex
@@ -1,9 +1,9 @@
-\svnidlong
-{$HeadURL: $}
-{$LastChangedDate: $}
-{$LastChangedRevision: $}
-{$LastChangedBy: $}
-\svnid{$Id: $}
+%\svnidlong
+%{$HeadURL: $}
+%{$LastChangedDate: $}
+%{$LastChangedRevision: $}
+%{$LastChangedBy: $}
+%\svnid{$Id: $}
 
 % the title page and front matter
 
