--- a/doc/tex/BBBar.tex
+++ b/doc/tex/BBBar.tex
@@ -1,9 +1,9 @@
-\svnidlong
-{$HeadURL$}
-{$LastChangedDate$}
-{$LastChangedRevision$}
-{$LastChangedBy$}
-\svnid{$Id: $}
+%\svnidlong
+%{$HeadURL$}
+%{$LastChangedDate$}
+%{$LastChangedRevision$}
+%{$LastChangedBy$}
+%\svnid{$Id: $}
 
 \section{Specific models involving $b$-quarks in the final state}
 
