--- a/doc/tex/Conclusions.tex
+++ b/doc/tex/Conclusions.tex
@@ -1,9 +1,9 @@
-\svnidlong
-{$HeadURL: svn+ssh://mrenna@svn.cern.ch/reps/LHCDMF/trunk/doc/tex/EFTValidity.tex $}
-{$LastChangedDate: 2015-05-22 01:10:53 -0500 (Fri, 22 May 2015) $}
-{$LastChangedRevision: 214 $}
-{$LastChangedBy: doglioni $}
-\svnid{$Id: $}
+%\svnidlong
+%{$HeadURL: svn+ssh://mrenna@svn.cern.ch/reps/LHCDMF/trunk/doc/tex/EFTValidity.tex $}
+%{$LastChangedDate: 2015-05-22 01:10:53 -0500 (Fri, 22 May 2015) $}
+%{$LastChangedRevision: 214 $}
+%{$LastChangedBy: doglioni $}
+%\svnid{$Id: $}
 
 %Points to be developed further:
 %\begin{itemize}
