--- a/doc/tex/EWSpecificModels_Appendix.tex
+++ b/doc/tex/EWSpecificModels_Appendix.tex
@@ -200,7 +200,7 @@ The cross sections for the various mono-$X$ and VBF signatures produced by this 
 	\caption{Five benchmarks for IDM in  ($M_{h_{1}},M_{h_{2}},M_{h_{\pm}},\lambda_{2},\lambda_{345}$) parameter space.
 		We also present the corresponding relic density ($\Omega h^2$), the spin-independent cross section for DM scattering on the proton ($\sigma_{SI}$),
 		and the LHC cross section at 13 TeV for mono-jet process $pp\to h_1,h_1+jet$ for $p_T^{jet}>100$~GeV cut ($\sigma_{LHC}$).}
-	\label{tab:i2HDMbenchMarks}
+	\label{tab:IDMbenchMarks}
 \end{table}
 
 
