--- a/doc/tex/EWSpecificModels_MonoHiggs.tex
+++ b/doc/tex/EWSpecificModels_MonoHiggs.tex
@@ -1,9 +1,9 @@
-\svnidlong
-{$HeadURL: $}
-{$LastChangedDate: $}
-{$LastChangedRevision: $}
-{$LastChangedBy: $}
-\svnid{$Id: $}   
+%\svnidlong
+%{$HeadURL: $}
+%{$LastChangedDate: $}
+%{$LastChangedRevision: $}
+%{$LastChangedBy: $}
+%\svnid{$Id: $}   
 
 Three benchmark simplified models \cite{Carpenter:2013xra,Berlin:2014cfa} 
 are recommended for Higgs+\MET searches:
