--- a/doc/tex/EWSpecificModels_VAMediators.tex
+++ b/doc/tex/EWSpecificModels_VAMediators.tex
@@ -1,9 +1,9 @@
-\svnidlong
-{$HeadURL: $}
-{$LastChangedDate: $}
-{$LastChangedRevision: $}
-{$LastChangedBy: $}
-\svnid{$Id: $}   
+%\svnidlong
+%{$HeadURL: $}
+%{$LastChangedDate: $}
+%{$LastChangedRevision: $}
+%{$LastChangedBy: $}
+%\svnid{$Id: $}   
 
 All models detailed in this Section are applicable to signatures where 
 a photon, a W boson, a Z boson or a Higgs boson
@@ -26,7 +26,7 @@ leptons from W and Z decays,
 and W or Z bosons decaying hadronically
 allow backgrounds to be rejected more effectively,
 making Z/$\gamma$/W+\MET searches
-still worth comparing with searches in the jet+\MET final state.
+still worth comparing with searches in the jet+\MET final state (see e.g. Ref.~\cite{Gershtein:2008bf}).
 
 In the case of a \spinone mediator,
 an example Feynman diagram for these processes can be constructed by taking
