--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -1,9 +1,9 @@
-\svnidlong
-{$HeadURL$}
-{$LastChangedDate$}
-{$LastChangedRevision$}
-{$LastChangedBy$}
-\svnid{$Id$}
+%\svnidlong
+%{$HeadURL$}
+%{$LastChangedDate$}
+%{$LastChangedRevision$}
+%{$LastChangedBy$}
+%\svnid{$Id$}
 
 Dark matter (DM) \sidenote{Many theories of physics beyond the Standard Model predict the existence
 of stable, neutral, weakly-interacting and massive particles that are
@@ -24,7 +24,8 @@ with a visible SM particle X(=$g, q, \gamma, Z, W$, or $h$).
 %% could be produced in association with Dark Matter.
 Such reactions, which are
 observed at colliders as particles or jets recoiling against an invisible state, are
-called ``mono-X'' or \MET{}+X reactions~\cite{Feng:2005gj,Beltran:2010ww,Bai:2010hh}, 
+called ``mono-X'' or \MET{}+X reactions (see e.g 
+Refs.~\cite{Birkedal:2004xn,Feng:2005gj,Petriello:2008pu,Beltran:2010ww,Bai:2010hh}), 
 where \MET is the missing transverse momentum observable in the detector.
 
 
@@ -289,7 +290,7 @@ the unique sensitivity of colliders to all possible DM signatures.
 
 The report provides a brief theoretical summary of the models considered, 
 starting from the set of simplified models and contact interactions put forward 
-in previous discussions and in the literature. 
+in previous discussions and in the literature cited above. 
 %CD: no literature here, or we have to cite >100 papers. 
 Its main body documents the studies 
 done within this Forum to identify a kinematically distinct set of model parameters
