--- a/doc/tex/SingleTop.tex
+++ b/doc/tex/SingleTop.tex
@@ -1,9 +1,9 @@
-\svnidlong
-{$HeadURL$}
-{$LastChangedDate$}
-{$LastChangedRevision$}
-{$LastChangedBy$}
-\svnid{$Id$}
+%\svnidlong
+%{$HeadURL$}
+%{$LastChangedDate$}
+%{$LastChangedRevision$}
+%{$LastChangedBy$}
+%\svnid{$Id$}
 
 Many different theories predict final states with a single top and associated missing 
 transverse momentum (monotop), some of them including dark matter candidates. 
