--- a/doc/tex/TTBar.tex
+++ b/doc/tex/TTBar.tex
@@ -1,9 +1,9 @@
-\svnidlong
-{$HeadURL$}
-{$LastChangedDate$}
-{$LastChangedRevision$}
-{$LastChangedBy$}
-\svnid{$Id$}
+%\svnidlong
+%{$HeadURL$}
+%{$LastChangedDate$}
+%{$LastChangedRevision$}
+%{$LastChangedBy$}
+%\svnid{$Id$}
 
 %As described in Section~\ref{sec:monojet_scalar}, a model with a scalar/pseudoscalar particle 
 %mediating the DM-SM interactions is one of the simplest UV completions of our EFT models.  
