--- a/doc/contributors/contributors.tex
+++ b/doc/contributors/contributors.tex
@@ -133,7 +133,7 @@
 \noindent\href{mailto:Lashkar.Kashif@cern.ch}{Lashkar Kashif} 
 \emph{University of Wisconsin-Madison, USA}\\
 \noindent\href{mailto:valya.khoze@durham.ac.uk}{Valentin V. Khoze} 
-\emph{Institute of Particle Physics Phenomenology, Durham University, United Kingdom}\\
+\emph{IPPP, Durham University, United Kingdom}\\
 \noindent\href{mailto:Raman.Khurana@cern.ch}{Raman Khurana} 
 \emph{National Central University, Taiwan}\\
 \noindent\href{mailto:khristian.kotov@cern.ch}{Khristian Kotov} 
