--- a/doc/tex/EFTValidity.tex
+++ b/doc/tex/EFTValidity.tex
@@ -1,9 +1,9 @@
-\svnidlong
-{$HeadURL$}
-{$LastChangedDate$}
-{$LastChangedRevision$}
-{$LastChangedBy$}
-\svnid{$Id: $}
+%\svnidlong
+%{$HeadURL$}
+%{$LastChangedDate$}
+%{$LastChangedRevision$}
+%{$LastChangedBy$}
+%\svnid{$Id: $}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -220,9 +220,9 @@ An example of the application of the two procedures to the limit on $M_*$ from R
 
 \begin{figure}
 	\centering
-	\includegraphics[width=0.95\textwidth]{figures/EFT/MstarvsCouplingSel600_DM_EFT_D5_DM50}
+	\includegraphics[width=0.95\textwidth]{figures/EFT/MstarLimitvscouplingSec600_Stop13_R0_DM_EFT_D5_DM50_tree.pdf}
 	\caption{95\% CL lower limits on the scale of the interaction of the D5 operator at 14~\tev, after the two truncation procedures. 
-		The procedure from~\cite{Racco:2015dxa} outlined in Section~\ref{sec:TruncationWithSHat} is shown in blue, while the procedure from Refs.~\cite{Busoni:2014sya,Aad:2015zva}, described in Section~\ref{sec:TruncationWithQTr} is shown in red. Only the region between the dashed and the solid lines is excluded.}
+		The procedure from~\cite{Racco:2015dxa} outlined in Section~\ref{sec:TruncationWithSHat} is shown in blue, while the procedure from Refs.~\cite{Busoni:2014sya,Aad:2015zva}, described in Section~\ref{sec:TruncationWithQTr} is shown in red. Only the region between the dashed and the solid lines is excluded. Even though the intersection between the two lines is not shown in this plot, it should be noted that no limit can be set anymore for sufficiently low couplings, whatever truncation method is used.}
 	\label{fig:monojet_MstarMmed}
 \end{figure}
 
