--- a/doc/tex/EWSpecificModels_EFT.tex
+++ b/doc/tex/EWSpecificModels_EFT.tex
@@ -1,9 +1,9 @@
-\svnidlong
-{$HeadURL: $}
-{$LastChangedDate: $}
-{$LastChangedRevision: $}
-{$LastChangedBy: $}
-\svnid{$Id: $}   
+%\svnidlong
+%{$HeadURL: $}
+%{$LastChangedDate: $}
+%{$LastChangedRevision: $}
+%{$LastChangedBy: $}
+%\svnid{$Id: $}   
 
 % +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 % Linda 11/5/2015
