Fix for a remaining NO COUNTRY
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@437 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/contributors/contributors.tex
+++ b/doc/contributors/contributors.tex
@@ -13,7 +13,7 @@
 \noindent\href{mailto:Jeremy.Andrea@cern.ch}{Jeremy Andrea} 
 \emph{Institut Pluridisciplinaire Hubert Curien/D\'epartement Recherches Subatomiques, Universit\'e de Strasbourg/CNRS-IN2P3, France}\\
 \noindent\href{mailto:alexandre.arbey@ens-lyon.fr}{Alexandre Arbey} 
-\emph{Universit\'e de Lyon and Centre de Recherche Astrophysique de Lyon, CNRS and Ecole Normale Sup\'erieure de Lyon, Lyon and CERN Theory Division, NO COUNTRY}\\
+\emph{Universit\'e de Lyon and Centre de Recherche Astrophysique de Lyon, CNRS and Ecole Normale Sup\'erieure de Lyon, France and CERN Theory Division, Switzerland}\\
 \noindent\href{mailto:georges.azuelos@cern.ch}{Georges Azuelos} 
 \emph{University of Montreal and TRIUMF, Canada}\\
 \noindent\href{mailto:Patrizia.Azzi@cern.ch}{Patrizia Azzi} 
@@ -133,7 +133,7 @@
 \noindent\href{mailto:Lashkar.Kashif@cern.ch}{Lashkar Kashif} 
 \emph{University of Wisconsin-Madison, USA}\\
 \noindent\href{mailto:valya.khoze@durham.ac.uk}{Valentin V. Khoze} 
-\emph{IPPP, Durham University, United Kingdom}\\
+\emph{Institute of Particle Physics Phenomenology, Durham University, United Kingdom}\\
 \noindent\href{mailto:Raman.Khurana@cern.ch}{Raman Khurana} 
 \emph{National Central University, Taiwan}\\
 \noindent\href{mailto:khristian.kotov@cern.ch}{Khristian Kotov} 
@@ -215,7 +215,7 @@
 \noindent\href{mailto:rainer.roehrig@cern.ch}{Rainer Roehrig} 
 \emph{Max-Planck-Institut für Physik, Germany}\\
 \noindent\href{mailto:David.Salek@cern.ch}{David Salek} 
-\emph{Nikhef and GRAPPA, The Netherlands}\\
+\emph{Nikhef and GRAPPA, Netherlands}\\
 \noindent\href{mailto:Arturo.Rodolfo.Sanchez.Pineda@cern.ch}{Arturo Sanchez Pineda} 
 \emph{INFN Sezione di Napoli, and Dipartimento di Fisica, Universit\`a di Napoli, Italy}\\
 \noindent\href{mailto:s.sarkar1@physics.ox.ac.uk}{Subir Sarkar} 
