comment that we've confirmed tau expression for scalar models holds for tau<1
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@440 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -618,7 +618,7 @@ where $x=3$ for scalars and $x=1$ for pseudoscalars. The loop integrals, with $f
   \eea
 \end{fullwidth}
 where $\tau = 4 m_{t}^2/m_{\phi,a}^2$. 
-
+% AB: confirmed that the above expression for tau>1 holds for 0<tau<1. 
 %for mediator masses above the top threshold, $\tau > 1$, where $\tau = 4 m_{t}^2/m_{\phi,a}^2$, and, for mediator masses below the top threshold, $\tau < 1$, 
 %\begin{fullwidth}
 %  \bea \label{eq:fphifb}
