more changes for arXiv submission
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@444 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -7,10 +7,10 @@
 
 %\usepackage[autokw=all]{svn-multi}[2015/05/12]
 %\svnidlong
-%{$HeadURL$}
-%{$LastChangedDate$}
-%{$LastChangedRevision$}
-%{$LastChangedBy$}
+%{$HeadURL: svn+ssh://doglioni@svn.cern.ch/reps/LHCDMF/trunk/doc/doc.tex $}
+%{$LastChangedDate: 2015-06-30 22:05:35 +0200 (Tue, 30 Jun 2015) $}
+%{$LastChangedRevision: 434 $}
+%{$LastChangedBy: doglioni $}
 %\svnid{$Id: doc.tex 128 2015-05-13 04:23:43Z mrenna $}
 \usepackage{graphicx}
 \usepackage[svgnames]{xcolor}
@@ -116,7 +116,7 @@
 \usepackage{etex}
 \reserveinserts{20}
 %,backref=true,maxcitenames=3,maxbibnames=3,
-\usepackage[hyperref=true,url=false,backend=bibtex,style=alphabetic,backref=false,firstinits=true,doi=false,eprint=true,date=year,language=USenglish]{biblatex}
+\usepackage[hyperref=true,url=false,backend=bibtex,style=alphabetic,backref=false,firstinits=true,doi=false,eprint=true,language=USenglish]{biblatex}
 % from http://tex.stackexchange.com/questions/176965/biblatex-sentence-case-and-math-mode-not-working-together
 \DeclareFieldFormat{sentencecase}{\MakeSentenceCase{#1}}
 \renewbibmacro*{title}{%
