--- a/doc/tex/EFTValidity.tex
+++ b/doc/tex/EFTValidity.tex
@@ -1,8 +1,8 @@
 %\svnidlong
-%{$HeadURL$}
-%{$LastChangedDate$}
-%{$LastChangedRevision$}
-%{$LastChangedBy$}
+%{$HeadURL: svn+ssh://doglioni@svn.cern.ch/reps/LHCDMF/trunk/doc/tex/EFTValidity.tex $}
+%{$LastChangedDate: 2015-07-01 00:23:48 +0200 (Wed, 01 Jul 2015) $}
+%{$LastChangedRevision: 436 $}
+%{$LastChangedBy: lowette $}
 %\svnid{$Id: $}
 
 
