--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -1,9 +1,9 @@
 %\svnidlong
-%{$HeadURL$}
-%{$LastChangedDate$}
-%{$LastChangedRevision$}
-%{$LastChangedBy$}
-%\svnid{$Id$}
+%{$HeadURL: svn+ssh://doglioni@svn.cern.ch/reps/LHCDMF/trunk/doc/tex/Introduction.tex $}
+%{$LastChangedDate: 2015-06-30 22:05:35 +0200 (Tue, 30 Jun 2015) $}
+%{$LastChangedRevision: 434 $}
+%{$LastChangedBy: doglioni $}
+%\svnid{$Id: Introduction.tex 434 2015-06-30 20:05:35Z doglioni $}
 
 Dark matter (DM) \sidenote{Many theories of physics beyond the Standard Model predict the existence
 of stable, neutral, weakly-interacting and massive particles that are
