--- a/doc/tex/SimplifiedModelsIntro.tex
+++ b/doc/tex/SimplifiedModelsIntro.tex
@@ -1,7 +1,7 @@
 \svnidlong
-{$HeadURL$}
-{$LastChangedDate$}
-{$LastChangedRevision$}
-{$LastChangedBy$}
-\svnid{$Id$}
+{$HeadURL: svn+ssh://doglioni@svn.cern.ch/reps/LHCDMF/trunk/doc/tex/SimplifiedModelsIntro.tex $}
+{$LastChangedDate: 2015-05-15 13:08:24 +0200 (Fri, 15 May 2015) $}
+{$LastChangedRevision: 188 $}
+{$LastChangedBy: boveia $}
+\svnid{$Id: SimplifiedModelsIntro.tex 188 2015-05-15 11:08:24Z boveia $}
 
