--- a/doc/tex/TTBar.tex
+++ b/doc/tex/TTBar.tex
@@ -1,9 +1,9 @@
 %\svnidlong
-%{$HeadURL$}
-%{$LastChangedDate$}
-%{$LastChangedRevision$}
-%{$LastChangedBy$}
-%\svnid{$Id$}
+%{$HeadURL: svn+ssh://doglioni@svn.cern.ch/reps/LHCDMF/trunk/doc/tex/TTBar.tex $}
+%{$LastChangedDate: 2015-06-30 22:05:35 +0200 (Tue, 30 Jun 2015) $}
+%{$LastChangedRevision: 434 $}
+%{$LastChangedBy: doglioni $}
+%\svnid{$Id: TTBar.tex 434 2015-06-30 20:05:35Z doglioni $}
 
 %As described in Section~\ref{sec:monojet_scalar}, a model with a scalar/pseudoscalar particle 
 %mediating the DM-SM interactions is one of the simplest UV completions of our EFT models.  
