--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -1,9 +1,9 @@
 %\svnidlong
-%{$HeadURL$}
-%{$LastChangedDate$}
-%{$LastChangedRevision$}
-%{$LastChangedBy$}
-%\svnid{$Id$}
+%{$HeadURL: svn+ssh://doglioni@svn.cern.ch/reps/LHCDMF/trunk/doc/tex/MonojetLikeModels.tex $}
+%{$LastChangedDate: 2015-07-01 15:04:05 +0200 (Wed, 01 Jul 2015) $}
+%{$LastChangedRevision: 440 $}
+%{$LastChangedBy: boveia $}
+%\svnid{$Id: MonojetLikeModels.tex 440 2015-07-01 13:04:05Z boveia $}
 
 
 % preamble
