--- a/doc/tex/SingleTop.tex
+++ b/doc/tex/SingleTop.tex
@@ -1,9 +1,9 @@
 %\svnidlong
-%{$HeadURL$}
-%{$LastChangedDate$}
-%{$LastChangedRevision$}
-%{$LastChangedBy$}
-%\svnid{$Id$}
+%{$HeadURL: svn+ssh://doglioni@svn.cern.ch/reps/LHCDMF/trunk/doc/tex/SingleTop.tex $}
+%{$LastChangedDate: 2015-06-30 22:05:35 +0200 (Tue, 30 Jun 2015) $}
+%{$LastChangedRevision: 434 $}
+%{$LastChangedBy: doglioni $}
+%\svnid{$Id: SingleTop.tex 434 2015-06-30 20:05:35Z doglioni $}
 
 Many different theories predict final states with a single top and associated missing 
 transverse momentum (monotop), some of them including dark matter candidates. 
