Added Chang-Seong Moon.
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@445 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/contributors/contributors.tex
+++ b/doc/contributors/contributors.tex
@@ -172,6 +172,8 @@
 \emph{GRAPPA, University of Amsterdam, Netherlands}\\
 \noindent\href{mailto:megy.theo@gmail.com}{Th\'eo Megy} 
 \emph{Laboratoire de Physique Corpusculaire, Clermont-Ferrand, France}\\
+\noindent\href{mailto:csmoon@cern.ch}{Chang-Seong Moon} 
+\emph{Universidade Estadual Paulista, Brazil}\\
 \noindent\href{mailto:enrico.morgante@unige.ch}{Enrico Morgante} 
 \emph{Department of Theoretical Physics, University of Geneva, Switzerland}\\
 \noindent\href{mailto:mrenna@fnal.gov}{Stephen Mrenna (editor)} 
