Added Felipe Rojas.
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@446 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/contributors/contributors.tex
+++ b/doc/contributors/contributors.tex
@@ -216,6 +216,8 @@
 \emph{SLAC, USA}\\
 \noindent\href{mailto:rainer.roehrig@cern.ch}{Rainer Roehrig} 
 \emph{Max-Planck-Institut für Physik, Germany}\\
+\noindent\href{mailto:astrofis.rojas@gmail.com}{Felipe Rojas Abatte} 
+\emph{Universidad T\'ecnico Federico Santa Mar\'ia, Chile}\\
 \noindent\href{mailto:David.Salek@cern.ch}{David Salek} 
 \emph{Nikhef and GRAPPA, Netherlands}\\
 \noindent\href{mailto:Arturo.Rodolfo.Sanchez.Pineda@cern.ch}{Arturo Sanchez Pineda} 
